--- a/app/src/main/res/layout/raw_album.xml
+++ b/app/src/main/res/layout/raw_album.xml
@@ -8,7 +8,7 @@
     card_view:cardUseCompatPadding="true"
     card_view:cardElevation="3dp"
     card_view:cardCornerRadius="3dp"
-    android:layout_height="260dp">
+    android:layout_height="270dp">
 
     <LinearLayout
         android:orientation="vertical"
@@ -18,16 +18,16 @@
         <ImageView
             android:id="@+id/album_image"
             android:layout_width="match_parent"
-            android:scaleType="centerCrop"
+            android:scaleType="fitXY"
             android:layout_height="200dp"
-            android:background="@drawable/adele" />
+            android:background="@drawable/placeholder" />
 
         <TextView
             android:id="@+id/artist_name"
             android:text="@string/album_name"
             android:textSize="@dimen/dim15"
             android:layout_marginTop="@dimen/dim5"
-            android:gravity="center"
+            android:gravity="center_horizontal"
             android:textColor="@color/GUNMETAL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -37,7 +37,7 @@
             android:text="@string/album_name"
             android:textSize="@dimen/dim10"
             android:layout_marginTop="@dimen/dim2"
-            android:gravity="center"
+            android:gravity="center_horizontal"
             android:textColor="@color/RED"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
