--- a/app/src/main/res/layout/activity_playingsong.xml
+++ b/app/src/main/res/layout/activity_playingsong.xml
@@ -88,14 +88,26 @@
             android:layout_height="50dp" />
     </LinearLayout>
 
-    <SeekBar
-        android:layout_marginTop="@dimen/dim10"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/seekBar_sound"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_gravity="center" />
+        android:layout_height="wrap_content">
+
+        <SeekBar
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/seekBar_sound"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="center" />
+
+        <ImageView
+            android:src="@drawable/volume"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:layout_marginRight="@dimen/dim20"/>
+    </LinearLayout>
+
 
     <LinearLayout
         android:orientation="horizontal"
