--- a/app/src/main/res/layout/activity_songs.xml
+++ b/app/src/main/res/layout/activity_songs.xml
@@ -52,6 +52,7 @@
                                 android:id="@+id/tabs"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:background="@color/GUNMETAL"
                                 app:tabMode="fixed"
                                 app:tabGravity="fill"/>
                         </android.support.design.widget.AppBarLayout>
