--- a/app/src/main/res/layout/bottom_playing_song.xml
+++ b/app/src/main/res/layout/bottom_playing_song.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/song_image"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
+                android:scaleType="fitXY"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
                 android:background="@drawable/placeholder" />
@@ -48,7 +48,7 @@
                     android:layout_marginTop="2dp"
                     android:textColor="@color/GUNMETAL"
                     android:layout_width="match_parent"
-                    android:layout_marginRight="@dimen/dim25"
+                    android:layout_marginRight="45dp"
                     android:layout_height="wrap_content" />
 
                 <TextView
@@ -56,7 +56,7 @@
                     android:textSize="@dimen/dim12"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
-                    android:layout_marginRight="@dimen/dim25"
+                    android:layout_marginRight="45dp"
                     android:layout_below="@+id/song_name"
                     android:textColor="@color/RED"
                     android:layout_width="match_parent"
@@ -67,7 +67,7 @@
 
             <ImageView
                 android:id="@+id/playPause"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
                 android:layout_height="@dimen/dim40"
                 android:layout_marginRight="@dimen/dim10"
                 android:layout_centerInParent="true"
