--- a/app/src/main/res/layout/raw_songs.xml
+++ b/app/src/main/res/layout/raw_songs.xml
@@ -26,10 +26,10 @@
                 android:id="@+id/song_image"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
+                android:scaleType="fitXY"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
-                android:background="@drawable/adele" />
+                android:background="@drawable/placeholder" />
 
             <LinearLayout
                 android:orientation="vertical"
@@ -46,10 +46,11 @@
                     android:textSize="@dimen/dim15"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="2dp"
+                    android:gravity="center_vertical"
                     android:textColor="@color/GUNMETAL"
                     android:layout_width="match_parent"
                     android:layout_marginRight="@dimen/dim25"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="20dp" />
 
                 <TextView
                     android:id="@+id/artist_name"
@@ -58,10 +59,11 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginRight="@dimen/dim25"
+                    android:gravity="center_vertical"
                     android:layout_below="@+id/song_name"
                     android:textColor="@color/RED"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="20dp" />
 
 
             </LinearLayout>
